fixed alignment

--- a/client/thought/css/thought.css
+++ b/client/thought/css/thought.css
@@ -53,7 +53,6 @@
 }
 
 .text-inner {
-
     color: white;
     width: inherit;
     height: inherit;
@@ -91,45 +90,8 @@
     flex-direction: row;
     align-items: center;
     text-align: center;
-=======
-	color: white;
-	width: inherit;
-	height: inherit;
-	vertical-align: middle;
-	line-height: normal;
-	overflow-x: hidden;
-	text-overflow: ellipsis;
-	overflow-y: hidden;
-	word-wrap: break-word;
 }
 
-.text-expanded {
-	position: relative;
-	/*display: block;*/
-	color: white;
-	/*margin-top: 0px;
-	/*margin: 0 auto;
-	outline: solid;
-	outline-color: white;
-	*/
-	height: inherit;
-	width: calc(100% - 33%);
-	/*vertical-align: middle;*/
-	/*horiz-align: middle;*/
-	line-height: normal;
-	overflow-x: auto;
-	overflow-y: auto;
-	word-wrap: break-word;
-	display: -ms-flexbox;
-	display: -webkit-flex;
-	display: flex;
-	-webkit-flex-flow: row wrap;
-	flex-wrap: nowrap;
-	flex-direction: row;
-	align-items: center;
-	text-align: center;
->>>>>>> 2a89d549365d861e7838fd0c4668170bb19dca43
-}
 
 .author {
 	font-size: 1.1em;
@@ -235,15 +197,11 @@ input.button-add {
 }
 
 .text-container {
-<<<<<<< HEAD
     display: block;
     overflow-y: auto;
     width: calc(100% - 33%);
-  }
-=======
-	display: block;
 }
->>>>>>> 2a89d549365d861e7838fd0c4668170bb19dca43
+
 
 .button-container {
 	display: block;
